# ckanext-datapackage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: general.yaml
ckanext/datapackage/: __init__.py  actions.py  auth.py  blueprint.py  plugin.py  settings.py  types.py
ckanext/datapackage/templates/package/snippets/: additional_info.html
